# vita-savemgr

./: .clang-format  .gitignore  .gitmodules  .lvimrc  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  appdb.c  appdb.h  file.c  file.h  main.c  savedata.c  savedata.h  vita_sqlite.c
.travis.d/: asset_id.py  build_vitashell_modules.sh  deploy_nightly.sh  install_toolchain.sh
sce_sys/livearea/contents/: template.xml
src/: appdb.c  appdb.h  button.c  button.h  common.h  config.c  config.h  console.c  console.h  display.c  display.h  file.c  file.h  font.c  font.h  input.c  input.h  main.c  system.c  system.h  util.c  util.h  vita_sqlite.c
